Fixed spacing bug in explore page

--- a/public/styles/pages/explore-activity.css
+++ b/public/styles/pages/explore-activity.css
@@ -59,6 +59,7 @@ h4 {
 #activity > img {
     width: 100%;
     height: 80%;
+    max-height: 30vh;
     border-radius: 20px;
     overflow: hidden;
     margin-bottom: 10px;
@@ -76,7 +77,7 @@ h4 {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 15px;
+    gap: 5px;
 }
 
 #activity-informations > h4, #activity-informations > p {
