--- a/public/styles/pages/explore.css
+++ b/public/styles/pages/explore.css
@@ -72,5 +72,10 @@ h4, p {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 15px;
+    gap: 5px;
+    max-width: 60%;
+}
+
+.activity-informations > h4, .activity-informations > p {
+    max-width: 100%;
 }
